<resources>
    <string name="app_name">Agrocraft</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="names">Name</string>
    <string name="phone_number">Phone number </string>
    <string name="address">Address</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="are_you_a_farmer_or_buyer">Are you a Farmer or Buyer ?</string>
    <string name="farmer">FARMER</string>
    <string name="buyer">BUYER</string>
    <string name="farmer_home_page">Farmer Home Page</string>
    <string name="farmer_login">Farmer Login</string>
    <string name="homepage">Homepage</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="lets_go">Lets Go</string>
    <string name="new_user">New user</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="add_product">Add Products</string>
    <string name="my_product">My Products</string>
    <string name="my_transaction">My Transactions</string>
    <string name="my_profile">Profile</string>


    <string name="todo">TODO</string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD


    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_category">Category</string>













=======
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile1">My Profile</string>
    <string name="checkout">Checkout</string>
>>>>>>> afaaf631900457ce65511b1d00655cb01875bc6f
</resources>
