<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:layout_weight="1"
android:orientation="vertical" >

<TextView
    android:id="@+id/textView2"
    android:layout_width="257dp"
    android:layout_height="77dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="30dp"
    android:gravity="center"
    android:text="@string/register"
    android:textColor="@android:color/background_dark"
    android:textSize="50sp"


    />

<EditText
    android:id="@+id/fullname"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:hint="@string/names"
    android:inputType="textPersonName"
    android:gravity="center"

    />

<EditText
    android:id="@+id/etAdm"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:layout_margin="20dp"
    android:hint="@string/email"
    android:gravity="center"

    />

<EditText
    android:id="@+id/phone"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:hint="@string/phone_number"
    android:gravity="center"

    android:ems="10"
    android:inputType="phone" />

<EditText
    android:id="@+id/address"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:hint="@string/address"
    android:gravity="center"

    android:ems="10"
    android:inputType="textPostalAddress"
    />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:hint="@string/password"
    android:gravity="center"

    android:ems="10"
    android:inputType="textPassword"
    />

<EditText
    android:id="@+id/etRetypedPassword"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:layout_margin="20dp"
    android:hint="@string/confirm_password"
    android:gravity="center"

    android:inputType="textPassword"
    />

<Button
    android:id="@+id/btnRegister"
    android:gravity="center"

    android:text="@string/submit"
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:background="@color/blue"

    android:textSize="15sp"

    />
</LinearLayout>