<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="178dp"
        android:layout_height="181dp"
        app:srcCompat="@drawable/add_product"
        android:layout_marginBottom="20dp"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="77dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_product"
        android:textColor="@android:color/background_dark"
        android:textSize="30dp"

        />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:gravity="center"

        />

    <EditText
        android:id="@+id/product_category"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:layout_margin="20dp"
        android:hint="@string/product_category"
        android:gravity="center"

        />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/product_price"
        android:gravity="center"

        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/product_quantity"
        android:gravity="center"

        android:ems="10"
        android:inputType="text"
        />

    <Button
        android:id="@+id/upload"
        android:gravity="center"

        android:text="@string/upload"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@color/blue"

        android:textSize="15sp"

        />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/submit" />


</LinearLayout>