<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="251dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/farmer_homepage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="77dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"


        />

    <Button
        android:id="@+id/add_product"
        android:layout_width="180dp"

        android:layout_height="45dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"

        android:gravity="center"
        android:text="@string/add_product"

        android:textSize="15sp" />

    <Button
        android:id="@+id/my_product"
        android:gravity="center"

        android:text="@string/my_product"
        android:layout_width="180dp"

        android:layout_height="45dp"
        android:background="@color/blue"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"

        />
    <Button
        android:id="@+id/my_transaction"
        android:gravity="center"

        android:text="@string/my_transaction"
        android:layout_width="180dp"

        android:layout_height="45dp"
        android:background="@color/blue"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:textSize="13sp"

        />
    <Button
        android:id="@+id/my_profile"
        android:gravity="center"

        android:text="@string/my_profile"
        android:layout_width="180dp"

        android:layout_height="45dp"
        android:background="@color/blue"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"

        />

</LinearLayout>